--- a/Notebook/2. MODEL TRAINING.ipynb
+++ b/Notebook/2. MODEL TRAINING.ipynb
@@ -59,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('stud.csv')"
+    "df = pd.read_csv(r'data/stud.csv')"
    ]
   },
   {
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "72459f1d",
    "metadata": {},
    "outputs": [
@@ -484,7 +484,7 @@
        "(1000, 19)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "ed5c4e99",
    "metadata": {},
    "outputs": [
@@ -505,7 +505,7 @@
        "((800, 19), (200, 19))"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "8c247bd0",
    "metadata": {},
    "outputs": [],
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "79ccb8e7",
    "metadata": {
     "scrolled": false
@@ -611,22 +611,22 @@
       "- R2 Score: 0.9997\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 7.7595\n",
-      "- Mean Absolute Error: 6.1900\n",
-      "- R2 Score: 0.7526\n",
+      "- Root Mean Squared Error: 7.9060\n",
+      "- Mean Absolute Error: 6.1750\n",
+      "- R2 Score: 0.7431\n",
       "===================================\n",
       "\n",
       "\n",
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 2.2591\n",
-      "- Mean Absolute Error: 1.7994\n",
-      "- R2 Score: 0.9774\n",
+      "- Root Mean Squared Error: 2.2949\n",
+      "- Mean Absolute Error: 1.8387\n",
+      "- R2 Score: 0.9766\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 5.9642\n",
-      "- Mean Absolute Error: 4.6226\n",
-      "- R2 Score: 0.8538\n",
+      "- Root Mean Squared Error: 6.0506\n",
+      "- Mean Absolute Error: 4.7110\n",
+      "- R2 Score: 0.8496\n",
       "===================================\n",
       "\n",
       "\n",
@@ -658,14 +658,14 @@
       "\n",
       "AdaBoost Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.8788\n",
-      "- Mean Absolute Error: 4.8250\n",
-      "- R2 Score: 0.8467\n",
+      "- Root Mean Squared Error: 5.7984\n",
+      "- Mean Absolute Error: 4.7560\n",
+      "- R2 Score: 0.8509\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.2097\n",
-      "- Mean Absolute Error: 4.8448\n",
-      "- R2 Score: 0.8415\n",
+      "- Root Mean Squared Error: 5.9161\n",
+      "- Mean Absolute Error: 4.6537\n",
+      "- R2 Score: 0.8562\n",
       "===================================\n",
       "\n",
       "\n"
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "e0159e5f",
    "metadata": {},
    "outputs": [
@@ -772,9 +772,9 @@
        "      <td>0.880433</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Random Forest Regressor</td>\n",
-       "      <td>0.853820</td>\n",
+       "      <th>8</th>\n",
+       "      <td>AdaBoost Regressor</td>\n",
+       "      <td>0.856169</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -782,9 +782,9 @@
        "      <td>0.851632</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>AdaBoost Regressor</td>\n",
-       "      <td>0.841534</td>\n",
+       "      <th>5</th>\n",
+       "      <td>Random Forest Regressor</td>\n",
+       "      <td>0.849550</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -804,7 +804,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>0.752567</td>\n",
+       "      <td>0.743135</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -814,16 +814,16 @@
        "                Model Name  R2_Score\n",
        "2                    Ridge  0.880593\n",
        "0        Linear Regression  0.880433\n",
-       "5  Random Forest Regressor  0.853820\n",
+       "8       AdaBoost Regressor  0.856169\n",
        "7    CatBoosting Regressor  0.851632\n",
-       "8       AdaBoost Regressor  0.841534\n",
+       "5  Random Forest Regressor  0.849550\n",
        "6             XGBRegressor  0.827797\n",
        "1                    Lasso  0.825320\n",
        "3    K-Neighbors Regressor  0.784030\n",
-       "4            Decision Tree  0.752567"
+       "4            Decision Tree  0.743135"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "9a6ad559",
    "metadata": {},
    "outputs": [
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "eb557b0a",
    "metadata": {},
    "outputs": [
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "1e707ec3",
    "metadata": {},
    "outputs": [
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "7c9a8b48",
    "metadata": {},
    "outputs": [
@@ -1043,7 +1043,7 @@
        "[200 rows x 3 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,6 +1057,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3acf1fbc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d4bce74",
    "metadata": {},
    "outputs": [],
    "source": []
