--- a/Notebook/1 . EDA STUDENT PERFORMANCE .ipynb
+++ b/Notebook/1 . EDA STUDENT PERFORMANCE .ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7eaae1d7",
    "metadata": {},
    "outputs": [],
@@ -74,12 +74,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "57907087",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('stud.csv')"
+    "df = pd.read_csv(r'C:\\Users\\Precision 5530 4K\\Documents\\Personal project\\Machine Learning\\End_to_End_ml_project\\Notebook\\data\\stud.csv')"
    ]
   },
   {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7d1a2a0b",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "417e5820",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
        "(1000, 8)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "ae16686e",
    "metadata": {},
    "outputs": [
@@ -344,7 +344,7 @@
        "0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "25f95bc8",
    "metadata": {},
    "outputs": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "2c2b61b6",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "76c608dc",
    "metadata": {},
    "outputs": [
@@ -544,7 +544,7 @@
        "max     100.00000     100.000000     100.000000"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "1afd3c09",
    "metadata": {},
    "outputs": [
@@ -685,7 +685,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "b9081742",
    "metadata": {},
    "outputs": [
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "2dd97e26",
    "metadata": {},
    "outputs": [
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "ae2822d1",
    "metadata": {},
    "outputs": [
@@ -830,13 +830,103 @@
        "1               completed          69             90             88  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0103a504",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gender                         0\n",
+       "race_ethnicity                 0\n",
+       "parental_level_of_education    0\n",
+       "lunch                          0\n",
+       "test_preparation_course        0\n",
+       "math_score                     0\n",
+       "reading_score                  0\n",
+       "writing_score                  0\n",
+       "total score                    0\n",
+       "average                        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "61661777",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'categorical_features' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Check for None values in categorical columns\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m df[categorical_features]\u001b[38;5;241m.\u001b[39misnull()\u001b[38;5;241m.\u001b[39many()\u001b[38;5;241m.\u001b[39many():\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWarning: None values found in categorical columns.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(df[categorical_features]\u001b[38;5;241m.\u001b[39misnull()\u001b[38;5;241m.\u001b[39msum())\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'categorical_features' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Check for None values in categorical columns\n",
+    "if df[categorical_features].isnull().any().any():\n",
+    "    print(\"Warning: None values found in categorical columns.\")\n",
+    "    print(df[categorical_features].isnull().sum())\n",
+    "else:\n",
+    "    print(\"No None values found in categorical columns.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f77382ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gender                         0\n",
+       "race_ethnicity                 0\n",
+       "parental_level_of_education    0\n",
+       "lunch                          0\n",
+       "test_preparation_course        0\n",
+       "math_score                     0\n",
+       "reading_score                  0\n",
+       "writing_score                  0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for None or NaN values in the features before transforming\n",
+    "if df.isnull().any().any():\n",
+    "    print(\"Warning: None or NaN values found in the dataset.\")\n",
+    "df.isnull().sum()"
    ]
   },
   {
@@ -849,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "3ffbfdf7",
    "metadata": {},
    "outputs": [
@@ -979,7 +1069,7 @@
        "4          229  76.333333  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "26dc3844",
    "metadata": {},
    "outputs": [
@@ -1018,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "572c8a75",
    "metadata": {},
    "outputs": [
